--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
             android:roundIcon="@drawable/jioevents"
             android:supportsRtl="true"
             android:theme="@style/Theme.WebPage"
-            tools:targetApi="31">
+            tools:targetApi="31"
+            >
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
